# financial-multi-agent-analyst

./: .dockerignore  .gitignore  Dockerfile.backend  README.md  docker-compose.yml  main.py  pyproject.toml  render.yaml  requirements.txt  test.py
backend/: main.py
backend/agents/: bear_agent.py  bull_agent.py  judge_agent.py  market_data_agent.py  news_agent.py  planner_agent.py  sec_rag_agent.py
backend/api/: routes.py
backend/config/: llm.py  llm_router.py
backend/models/: schemas.py
backend/rag/: ingest.py  retriever.py  vector_store.py
backend/workflows/: nodes.py  state.py  stock_workflow.py
frontend/: Dockerfile.frontend  nginx.conf  package-lock.json  package.json  vercel.json
frontend/src/: App.jsx
