[project]
name = "finacial-multi-agent-analysis"
version = "0.1.0"
description = "A agentic app for users to get knowlege about perticular company and if they should invest or not"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.15.0",
    "chromadb>=1.5.9",
    "fastapi>=0.138.2",
    "feedparser>=6.0.12",
    "httpx>=0.28.1",
    "langchain>=1.3.11",
    "langchain-chroma>=1.1.0",
    "langchain-community>=0.4.2",
    "langchain-google-genai>=4.2.6",
    "langchain-groq>=1.1.3",
    "langchain-huggingface>=1.2.2",
    "langgraph>=1.2.6",
    "langsmith>=0.9.3",
    "pandas>=2.3.2",
    "pydantic>=2.13.4",
    "pypdf>=6.14.2",
    "python-dotenv>=1.2.2",
    "sentence-transformers>=5.6.0",
    "uvicorn>=0.49.0",
    "yfinance>=1.5.1",
]